chore: add comment for scrollbar issue

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -38,6 +38,10 @@
   *[data-highlighted]:not(:hover) {
     @apply !outline-none focus:outline-2 focus:outline-white focus:ring-2 focus:ring-blue-500 focus:ring-offset-2;
   }
+  /* ? hack to stop the scrollbar being hidden when a modal is open */
+  /* body[data-scroll-locked][data-scroll-locked] {
+    overflow: auto !important;
+  } */
 }
 
 /* autofill style hack: https://github.com/tailwindlabs/tailwindcss/discussions/8679 */
